plugins/sunfish/awareness/HubLocationProvider: Clean URL construction future deprecation.